syntax = "proto3";

package com.mynotes.grpc.service;
option java_multiple_files = true;

message EmployeeDetailsRequest {
  int32 id = 1;
}

message EmployeeListRequest {
  int32 count = 1;
}

message Employee {
  int32 id = 1;
  string fName = 2;
  string lName = 3;
}

service EmployeeService {
  //unary
  rpc details(EmployeeDetailsRequest) returns (Employee);

  // server-side streaming
  rpc list(EmployeeListRequest) returns(stream Employee);

}